--- a/dark_forest/arena/client/index.html
+++ b/dark_forest/arena/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta
       name="description"
       content="Dark Forest, the world's first decentralized real-time strategy game. Built on Ethereum with zkSNARKs."
